--- a/rapport/slides.tex
+++ b/rapport/slides.tex
@@ -123,14 +123,12 @@ Comparaison de 2 types de tries :
 \includegraphics{figures/briandais_test.pdf}
 
 \column{.3\textwidth} % Right column and width
-%\begin{verbatim}
 struct \{\\
    $\;$char clé;\\
    $\;$briandais* frere;\\
    $\;$briandais* fils;\\
    $\;$int cpt;\\
 \} briandais;
-%\end{verbatim}
 
 \end{columns}
 \end{frame}
@@ -142,10 +140,9 @@ struct \{\\
 \begin{columns}[c] % The "c" option specifies centered vertical alignment while the "t" option is used for top vertical alignment
 
 \column{.6\textwidth} % Left column and width
-\includegraphics{figures/graph_template.pdf}
+\includegraphics[scale=0.4]{figures/trie_hybride.pdf}
 
 \column{.35\textwidth} % Right column and width
-%\begin{verbatim}
 struct \{\\
    $\;$char clé;\\
    $\;$trieHybride* inferieur;\\
@@ -153,7 +150,6 @@ struct \{\\
    $\;$trieHybride* superieur;\\
    $\;$char fin;\\
 \} trieHybride;
-%\end{verbatim}
 
 \end{columns}
 \end{frame}
